--- a/_includes/header.html
+++ b/_includes/header.html
@@ -23,8 +23,12 @@
 </head>
 <body>
 	<header class="navigation" role="banner">
+		<div class="branding-wrapper">
+			<div class="branding">
+			<a aria-label="Home" href="{{ site.baseurl }}/" class="logo"><h1>{{ site.title }}</h1></a>{% if site.facebook != "" %}<a class="branding-link fb" href="http://www.facebook.com/{{ site.facebook }}">Like us on Facebook</a>{% endif %}
+		</div>
+		</div>
 		<div class="navigation-wrapper">
-			<a aria-label="Home" href="{{ site.baseurl }}/" class="logo"><h1>{{ site.title }}</h1></a>
 			<a href="javascript:void(0)" class="navigation-menu-button" id="js-mobile-menu">MENU</a>
 			<a href="/search" class="navigation-search-button" id="js-search-toggle">Search</a>
 			<nav role="navigation">
