--- a/_sass/components/_hero.scss
+++ b/_sass/components/_hero.scss
@@ -4,7 +4,7 @@ $action-color: #477DCA !default;
 $hero-background-top: #7F99BE; 
 $hero-background-bottom: #20392B;
 $hero-color: $base-font-color;
-$hero-background-color: #B6E0F1;
+$hero-background-color: #0F2A00;
 $gradient-angle: 10deg;
 $hero-image: '#{"" + $image-directory}/hero-home.jpg';
 @include background(url($hero-image));
@@ -21,54 +21,54 @@ background-size: auto 100%;
 	@include outer-container;
 	@include clearfix;
 	text-align: left;
+	padding: $gutter;
 	padding-top: 320px;
 	.hero-copy {
-		background: #fff;
-		padding: $gutter;
-		border-bottom: 1px solid #eee;
 		h1 {
-			color: $brand-primary;
+			color: #fff;
 			line-height: 1.1em;
 			a {
-				color: $brand-primary;
+				color: #fff;
 				&:hover {
 					text-decoration: none;
 				}
 			}
 		}
 		p {
-			color: $hero-color;
+			color: #fff;
 			line-height: 1.4em;
 		}
 	}
 }
 
 @include media($tablet) {
-	background-position: left top;
+	background-position: right top;
 	.hero-inner {
-		margin: auto auto auto 50%;
 		padding: $gutter;
 		min-height: 300px;
 		.hero-copy {
+			width: 50%;
 			text-align: left;
-			padding: $gutter;
-			box-shadow: #2d373b 0 1px 15px;
-      
 			h1 {
 				font-size: 1.6em;
 				margin-bottom: 0.5em;
 			}
+		}
+		.funder-logo-container {
+		width: 50%;
+		float: right;
+		text-align: right;
+		img {
+			box-shadow: inset 0 1px 0 rgba(255,255,255,0.25),0 1px 2px rgba(0,0,0,0.05);
+		}
 		}
 	}
 }
 
 @include media($desktop) {
 	.hero-inner {
-		margin: auto auto auto 50%;
-		padding: $gutter;
 		min-height: 400px;
 		.hero-copy {
-			padding: $gutter * 2;
 			h1 {
 				font-size: 2.4em;
 			}
@@ -82,9 +82,6 @@ background-size: auto 100%;
 @each $name, $color in $colors {
 	&.#{"" + $name} {
 		.hero-copy {
-			h1, h1 a {
-				color: $color;
-			}
 			.button {
 				@extend button.#{"" + $name}
 			}
