--- a/css/application.scss
+++ b/css/application.scss
@@ -26,7 +26,7 @@
 @import "components/google_embeds";
 @import "components/box";
 @import "components/page.default";
-@import "components/page.hero";
+@import "components/page.home";
 @import "components/mailchimp";
 @import "components/footer";
 @import "components/profiles";
