--- a/_sass/base/_navigation-settings.scss
+++ b/_sass/base/_navigation-settings.scss
@@ -1,11 +1,11 @@
 // Navigation Settings
 
 $base-border-color: gainsboro !default;
-$base-border-radius: 3px !default;
+$base-border-radius: 0 !default;
 $action-color: #477DCA !default;
 $dark-gray: #333 !default;
 $large-screen: em(950) !default;
-$navigation-padding: 1em;
+$navigation-padding: 18px;
 $navigation-background: $brand-primary;
 $navigation-color: transparentize(white, 0.1);
 $navigation-color-hover: white;
@@ -17,11 +17,11 @@ $navigation-menu-button-image-height: 21px;
 $navigation-search-background: #fff;
 $navigation-search-border: 1px solid darken($navigation-background, 5);
 $navigation-active-link-color: transparentize(white, 0.5);
-$navigation-submenu-padding: 0.7em;
+$navigation-submenu-padding: 12px;
 $navigation-submenu-width: 14em;
 $navigation-font-weight: bold;
 $horizontal-bar-mode: $large-screen;
-$logo-image-height: 20px;
-$logo-image-width: 250px;
+$logo-image-height: 130px;
+$logo-image-width: 400px;
 $small-screen: em($gutter + $logo-image-width + $navigation-height + $navigation-height);
 $tiny-screen: em(320px);
