--- a/css/application.scss
+++ b/css/application.scss
@@ -28,6 +28,7 @@
 @import "components/page.default";
 @import "components/page.home";
 @import "components/mailchimp";
+@import "components/form-item";
 @import "components/footer";
 @import "components/profiles";
 @import "components/pagination";
@@ -39,4 +40,3 @@
 @import "components/contact-form";
 @import "components/scroll_on_page";
 @import "components/section-button";
-// @import "components/modal";
