Fixes for search etc

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -21,19 +21,16 @@
 		</div>
 	</section>
 	</header>
-	<div class="container">
-		<section id="content">
-			<h1 class="title">{{ page.title }}</h1>
-			<article>
-				{{ content }}
-			</article>
-		</section>
-		<aside id="sidebar-second">
-			{% include events.html %}
-			{% include posts.html %}
-			{% include mailchimp.html %}
-		</aside>
-	</div>
+</div>
+{{ content }}
+<div class="container">
+<div id="contact-cta-wrapper">
+<div class="box box-primary">
+<h3>Contact us</h3>
+<p>If you have any idea for a project or you'd like to get involved please get in touch.</p>
+<a class="button" href="/contact">Get in touch</a>
+</div>
+</div>
 </div>
 </main>
 {% include footer.html %}
