--- a/css/application.scss
+++ b/css/application.scss
@@ -22,11 +22,13 @@
 @import "components/mscene";
 @import "components/navigation";
 @import "components/itemlist";
+@import "components/vcard";
 @import "components/hero";
 @import "components/google_embeds";
 @import "components/box";
 @import "components/page.default";
 @import "components/page.home";
+@import "components/page.news";
 @import "components/mailchimp";
 @import "components/form-item";
 @import "components/footer";
