Alter header for funder logo

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -25,7 +25,8 @@
 	<header class="navigation" role="banner">
 		<div class="branding-wrapper">
 			<div class="branding">
-			<a aria-label="Home" href="{{ site.baseurl }}/" class="logo"><h1>{{ site.title }}</h1></a>{% if site.facebook != "" %}<a class="branding-link fb" href="http://www.facebook.com/{{ site.facebook }}">Like us on Facebook</a>{% endif %}
+			<a aria-label="Home" href="{{ site.baseurl }}/" class="logo"><h1>{{ site.title }}</h1></a>
+			<span class="funder-logo">Funded by the Big Lottery and European Social Fund</span>
 		</div>
 		</div>
 		<div class="navigation-wrapper">
