--- a/_sass/base/_mixins.scss
+++ b/_sass/base/_mixins.scss
@@ -1,9 +1,9 @@
-@mixin logoresizer($orginalimagewidth, $orginalimageheight) {
+@mixin logoresizer($orginalimagewidth, $orginalimageheight, $maxwidth) {
 	$size: 320;
 	background-size: ($size - ($gutter*2)) (($size - ($gutter*2)) * ($orginalimageheight/$orginalimagewidth));
 	width: ($size - ($gutter*2));
 	height: ($size - ($gutter*2))*($orginalimageheight/$orginalimagewidth);
-	@while $size < 410px {
+	@while $size < $maxwidth {
 		@include media(#{$size}px) {
 			background-size: ($size - ($gutter*2)) (($size - ($gutter*2)) * ($orginalimageheight/$orginalimagewidth));
 			width: ($size - ($gutter*2));
