--- a/_sass/components/_hero.scss
+++ b/_sass/components/_hero.scss
@@ -4,7 +4,7 @@ $action-color: #477DCA !default;
 $hero-background-top: #7F99BE; 
 $hero-background-bottom: #20392B;
 $hero-color: $base-font-color;
-$hero-background-color: #0F2A00;
+$hero-background-color: #515356;
 $gradient-angle: 10deg;
 $hero-image: '#{"" + $image-directory}/banners/hero-home.jpg';
 @include background(url($hero-image));
@@ -22,6 +22,7 @@ background-size: auto 100%;
 	padding-top: 320px;
 	.hero-copy {
 		h1 {
+			font-size: 1.4em;
 			color: #fff;
 			line-height: 1.1em;
 			a {
@@ -38,33 +39,37 @@ background-size: auto 100%;
 	}
 }
 
-@include media($tablet) {
+@include media(890px) {
 	background-position: right top;
 	.hero-inner {
 		padding: $gutter;
 		min-height: 300px;
+		position: relative;
 		.hero-copy {
 			margin-top: $gutter;
 			margin-left: 12px;
-			width: 50%;
+			width: 45%;
 			text-align: left;
 			h1 {
 				font-size: 1.6em;
 				margin-bottom: 0.5em;
 			}
 		}
-		.funder-logo-container {
-		width: 50%;
-		float: right;
-		text-align: right;
-		img {
-			box-shadow: inset 0 1px 0 rgba(255,255,255,0.25),0 1px 2px rgba(0,0,0,0.05);
-		}
-		}
 	}
 }
 
 @include media($desktop) {
+	.hero-inner {
+		min-height: 400px;
+		.hero-copy {
+			h1 {
+				font-size: 2em;
+			}
+		}
+	}
+}
+
+@include media($bigscreen) {
 	.hero-inner {
 		min-height: 400px;
 		.hero-copy {
