--- a/_includes/mailchimp.html
+++ b/_includes/mailchimp.html
@@ -2,7 +2,7 @@
         <!-- Begin MailChimp Signup Form -->
         <div id="mc_embed_signup">
             <form action=
-            "//aylestoneallotments.us12.list-manage.com/subscribe/post?u=52f96d69087190a94f6b0b205&amp;id=6c7207ebc9"
+            "//valonline.us5.list-manage.com/subscribe/post?u=6acaec623847a5ccf3d7f894e&amp;id=008a5e7c7d"
             class="validate" id="mc-embedded-subscribe-form" method="post"
             name="mc-embedded-subscribe-form" novalidate="" target="_blank">
                 <div id="mc_embed_signup_scroll">
