--- a/_sass/components/_teaser.scss
+++ b/_sass/components/_teaser.scss
@@ -5,8 +5,8 @@
 		background: white;
 		border: 1px solid $light-gray;
 		padding: $gutter;
-		height: 23em;
-		font-size: 0.9em;
+		height: 28em;
+		font-size: 0.88em;
 		h4 {
 			margin-bottom: 0;
 		}
@@ -15,10 +15,15 @@
 			font-size: 0.8em;
 		}
 		img {
+			width: 100%;
+			height: auto;
 			transition: opacity 0.25s linear;
 			&:hover, &:focus {
 				opacity: 0.7;
 			}
+		}
+		a.button {
+		font-size: 1em;
 		}
 	}
     @include media($mobile) {
