--- a/_sass/components/_hero.scss
+++ b/_sass/components/_hero.scss
@@ -26,6 +26,7 @@ background-size: auto 100%;
 			font-size: 1.6em;
 			color: #fff;
 			line-height: 1.1em;
+			margin-bottom: 0.4em;
 			a {
 				color: #fff;
 				&:hover {
