--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -1,7 +1,16 @@
 <form id="contact-form" action="https://valonline-jekyll-forms.herokuapp.com/send" method="post">
 <div class="form-item">Email <input type="text" name="email"></div>
+<div class="form-item">Age <input type="text" name="age"></div>
 <div class="form-item">Name <input type="text" name="name"></div>
-<div class="form-item">Message <textarea name="message" cols="40" rows="5"></textarea></div>
+<div class="form-item">Your employment status<select name="employment">
+<option value="">- Choose one -</option>
+<option value="Unemployed">Unemployed</option>
+<option value="Education">In education</option>
+<option value="In training">In training</option>
+<option value="Zero hours">Zero hours contract</option>
+<option value="Other">Other</option>
+</select></div>
+<div class="form-item">Tell us what you need help with <textarea name="message" cols="40" rows="5"></textarea></div>
 <div class="form-item"><input type="hidden" name="formname" value="www_yesproject_org_contact"></div>
 <div class="form-item"><input type="text" name="gotcha" style="display:none"></div>
 <div class="form-item form-checkbox"><input type="checkbox" name="mailchimp" value="subscribe"> I would like to receive news updates from the YES Project </div>
