--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -21,7 +21,7 @@
 		<div class="footer-links footer-links-social">
 			<h4>Follow us</h4>
 			<ul>
-				{% if site.facebook != "" %}<li><a href="http://www.facebook.com/{{ site.facebook }}">{{ site.facebook }}</a></li>{% endif %}
+				{% if site.facebook != "" %}<li><a href="http://www.facebook.com/{{ site.facebook }}">Like us on Facebook</a></li>{% endif %}
 			</ul>
 		</div>
 		<div class="footer-copyright">
