--- a/_sass/base/_forms.scss
+++ b/_sass/base/_forms.scss
@@ -75,9 +75,19 @@ input[type="file"] {
 }
 
 select {
-  margin-bottom: $base-spacing;
+  border: $base-border;
+  border-radius: $base-border-radius;
+  box-sizing: border-box;
+  font-family: $base-font-family;
+  font-size: $base-font-size;
+  margin-bottom: $base-spacing / 2;
+  padding: $base-spacing / 3;
+  transition: border-color;
   max-width: 100%;
-  width: auto;
+  width: 13em;
+  line-height: 1;
+  -webkit-appearance: none;
+  background: url('#{"" + $image-directory}/ui/caret.png') no-repeat 95% #fff;
 }
 
 .element-invisible {
