--- a/_sass/components/_navigation.scss
+++ b/_sass/components/_navigation.scss
@@ -358,7 +358,10 @@ header.navigation {
 		form.search-form {
 			padding: 0 20px 0 15px;
 			input[type="submit"] {
-				width: 20%;
+				width: 30%;
+				@include media($tablet) {
+					width: 20%;
+				}
 				position: absolute;
 				top: 0.5em;
 				padding: 0.67em 0;
@@ -366,7 +369,10 @@ header.navigation {
 			}
 
 			input[type="text"] {
-				width: 80%;
+				width: 70%;
+				@include media($tablet) {
+					width: 80%;
+				}
 			}
 		}
 	}
