Big lottery in footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -25,6 +25,7 @@
 			</ul>
 		</div>
 		<div class="footer-copyright">
+			<span class="funder-logo">Funded by the Big Lottery and European Social Fund</span>
 			<p>{{ site.copyright }}</p>
 		</div>
   														   
