--- a/_sass/components/_navigation.scss
+++ b/_sass/components/_navigation.scss
@@ -6,6 +6,14 @@ header.navigation {
 	width: 100%;
 	z-index: 999;
 
+	span.funder-logo {
+		display: none;
+		@include media($desktop) {
+			margin-top: $gutter;
+			display: block;
+		}
+	}
+
 	.branding-wrapper {
 		background: #fff;
 		z-index: 1000;
@@ -392,10 +400,7 @@ a.logo {
 }
 
 span.funder-logo {
-	display: none;
-	@include media($desktop) {
-		display: block;
-		margin: $gutter;
+		margin: 0 $gutter $gutter $gutter;
 		color: #fff;
 		font-weight: bold;
 		float: right;
@@ -405,7 +410,7 @@ span.funder-logo {
 		@include transition(all 0.1s ease-in-out);
 		@include logoresizer(254, 116, 254);
 		background-image:url('#{"" + $image-directory}/ui/big-lottery-logo.png');
-	}
+
 }
 
 .navigation-menu-button {
