--- a/_sass/components/_footer.scss
+++ b/_sass/components/_footer.scss
@@ -52,8 +52,16 @@
     clear: both;
     width: 100%;
     color: $footer-disclaimer-color;
-    font-size: 0.9em;
+    font-size: 0.8em;
     line-height: 1.5em;
     margin: auto;
+  }
+  
+  span.funder-logo {
+	  margin-bottom: $gutter;
+	  @include media($tablet) {
+		  float: right;
+		  margin-left: $gutter;
+	  }
   }
 }
