--- a/_sass/components/_navigation.scss
+++ b/_sass/components/_navigation.scss
@@ -9,7 +9,8 @@ header.navigation {
 	span.funder-logo {
 		display: none;
 		@include media($desktop) {
-			margin-top: $gutter;
+			float: right;
+			margin: $gutter;
 			display: block;
 		}
 	}
@@ -400,17 +401,15 @@ a.logo {
 }
 
 span.funder-logo {
-		margin: 0 $gutter $gutter $gutter;
+		display: block;
 		color: #fff;
 		font-weight: bold;
-		float: right;
 		background-repeat: no-repeat;
 		background-position: center center;
 		text-indent: -99999px;
 		@include transition(all 0.1s ease-in-out);
 		@include logoresizer(254, 116, 254);
 		background-image:url('#{"" + $image-directory}/ui/big-lottery-logo.png');
-
 }
 
 .navigation-menu-button {
