Box improvement and CTA on contact layouts

--- a/_layouts/contact.html
+++ b/_layouts/contact.html
@@ -13,6 +13,7 @@
 				</article>
 			</section>
 			<aside id="sidebar-second">
+				{% include box.html class="box-primary" title="Call us" text="Get in touch with us by completing the online form or call us on <strong>0116 257 4973</strong>"%}
 			</aside>
 		</div>
 	</div>
