--- a/_includes/box.html
+++ b/_includes/box.html
@@ -1,1 +1,1 @@
-<div class="box {% if include.class == null %}box-primary{% else %}{{ include.class }}{% endif %}"><h3>{{ include.title }}</h3><p>{{ include.text }}</p><a href="{{ include.url }}" class="button">{{ include.buttontext }}</a></div>
+<div class="box {% if include.class == null %}box-primary{% else %}{{ include.class }}{% endif %}"><h3>{{ include.title }}</h3><p>{{ include.text }}</p>{% if include.buttontext == null %}{% else %}<a href="{{ include.url }}" class="button">{{ include.buttontext }}</a>{% endif %}</div>
