--- a/_layouts/course.html
+++ b/_layouts/course.html
@@ -13,9 +13,7 @@
 				</article>
 			</section>
 			<aside id="sidebar-second">
-				{% include events.html %}
-				{% include posts.html %}
-				{% include mailchimp.html %}
+				{% include box.html class="box-primary" title="Get started" text="Learn more about this course" buttontext="Get in touch" url="/contact" %}
 			</aside>
 		</div>
 	</div>
