--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -24,10 +24,10 @@
 				{% if site.facebook != "" %}<li><a href="http://www.facebook.com/{{ site.facebook }}">Like us on Facebook</a></li>{% endif %}
 			</ul>
 		</div>
+		
 		<div class="footer-copyright">
-			<span class="funder-logo">Funded by the Big Lottery and European Social Fund</span>
+		    <span class="val-logo">Funded by the Big Lottery and European Social Fund</span>
 			<p>{{ site.copyright }}</p>
-		</div>
-  														   
+		</div>								   
 	</div>
 </footer>
