--- a/_sass/components/_navigation.scss
+++ b/_sass/components/_navigation.scss
@@ -400,16 +400,30 @@ a.logo {
 	background-image:url('#{"" + $image-directory}/ui/logo.png');
 }
 
+span.funder-logo, span.val-logo {
+	display: block;
+	color: #fff;
+	font-weight: bold;
+	background-repeat: no-repeat;
+	background-position: center center;
+	text-indent: -99999px;
+}
+
 span.funder-logo {
-		display: block;
-		color: #fff;
-		font-weight: bold;
-		background-repeat: no-repeat;
-		background-position: center center;
-		text-indent: -99999px;
-		@include transition(all 0.1s ease-in-out);
-		@include logoresizer(254, 116, 254);
-		background-image:url('#{"" + $image-directory}/ui/big-lottery-logo.png');
+	@include transition(all 0.1s ease-in-out);
+	background-image:url('#{"" + $image-directory}/ui/big-lottery-logo.png');
+	@include logoresizer(254, 116, 254);
+}
+
+span.val-logo {
+	float: right;
+	margin-left: $gutter;
+	margin-right: -100px;
+	background-image:url('#{"" + $image-directory}/ui/val-logo.png');
+	background-size: 93px 128px;
+	width: 93px;
+	height: 128px;
+	@include transition(all 0.1s ease-in-out);
 }
 
 .navigation-menu-button {
