--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -26,7 +26,7 @@
 		</div>
 		
 		<div class="footer-copyright">
-		    <span class="val-logo">Funded by the Big Lottery and European Social Fund</span>
+		    <span class="val-logo">A Voluntary Action LeicesterShire (VAL) service.</span>
 			<p>{{ site.copyright }}</p>
 		</div>								   
 	</div>
