--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -26,7 +26,7 @@
 		</div>
 		
 		<div class="footer-copyright">
-		    <span class="val-logo">A Voluntary Action LeicesterShire (VAL) service.</span>
+		    <a href="http://www.valonline.org.uk"><span class="val-logo">A Voluntary Action LeicesterShire (VAL) service.</a></span>
 			<p>{{ site.copyright }}</p>
 		</div>								   
 	</div>
