--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,7 +13,7 @@
 	<meta property="og:image" content="{{ site.url}}/img/social/og-profile.jpg" />
 	<meta name="twitter:card" content="summary" />
 	<meta name="twitter:url" content="{{ page.url | prepend: site.url }}" />
-	<meta name="twitter:image" content="{{ site.url}}/img/social/twitter-profile.jpg" />
+	<meta name="twitter:image" content="{{ site.url}}/img/social/og-profile.jpg" />
 	<meta name="twitter:title" content="{{ site.title }}" />
 	<meta name="twitter:description" content="{{ site.description }}" />
 	<title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %} | {{ site.title }}</title>
