Add video features

--- a/css/application.scss
+++ b/css/application.scss
@@ -33,6 +33,7 @@
 @import "components/form-item";
 @import "components/footer";
 @import "components/profiles";
+@import "components/video";
 @import "components/pagination";
 @import "components/teaser";
 @import "components/search";
