--- a/css/application.scss
+++ b/css/application.scss
@@ -30,6 +30,7 @@
 @import "components/page.home";
 @import "components/page.news";
 @import "components/mailchimp";
+@import "components/socialsharingbox";
 @import "components/form-item";
 @import "components/footer";
 @import "components/profiles";
