--- a/_sass/components/_fullcalendar.scss
+++ b/_sass/components/_fullcalendar.scss
@@ -1245,3 +1245,8 @@ be a descendant of the grid when it is being dragged.
 .fc-unthemed .fc-list-empty { /* theme will provide own background */
 	background-color: #eee;
 }
+.box-calendarmini {
+.readmore {
+	margin-top: 1em;
+}
+}
