--- a/css/application.scss
+++ b/css/application.scss
@@ -33,6 +33,7 @@
 @import "components/carousel";
 @import "components/fullcalendar";
 @import "components/socialsharingbox";
+@import "components/events";
 @import "components/form-item";
 @import "components/footer";
 @import "components/profiles";
