--- a/_layouts/course.html
+++ b/_layouts/course.html
@@ -13,6 +13,7 @@
 				</article>
 			</section>
 			<aside id="sidebar-second">
+				{% include calendarmini.html %}
 				{% include box.html class="box-primary" title="Get started" text="Learn more about this course" buttontext="Get in touch" url="/contact" %}
 			</aside>
 		</div>
