--- a/_sass/components/_fullcalendar.scss
+++ b/_sass/components/_fullcalendar.scss
@@ -1250,3 +1250,9 @@ be a descendant of the grid when it is being dragged.
 	margin-top: 1em;
 }
 }
+
+#sidebar-second {
+	.box-calendarmini {
+		height: 430px;
+	}
+}
