--- a/_includes/calendarmini.html
+++ b/_includes/calendarmini.html
@@ -2,5 +2,5 @@
 	<h3>What's on</h3>
 	<div id="calendarmini">
 	</div>
-	<a class="readmore" href="{{ site.baseurl }}/events">more</a>
+	<a class="readmore" href="{{ site.baseurl }}/course-dates">more</a>
 </div>
