--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -1,4 +1,4 @@
-<form id="contact-form" action="https://valonline-jekyll-forms.herokuapp.com/send" method="post">
+<form id="contact-form" action="https://formspree.io/info@yesproject.org" method="post">
 <div class="form-item">Email <input type="text" name="email"></div>
 <div class="form-item">Name <input type="text" name="name"></div>
 <div class="form-item">Age <input type="text" name="age"></div>
