--- a/_sass/components/_footer.scss
+++ b/_sass/components/_footer.scss
@@ -1,9 +1,6 @@
 .footer {
   $base-spacing: 1.5em !default;
   $footer-background: lighten($light-gray, 20%);
-  $footer-color: desaturate(darken($footer-background, 40%), 50%);
-  $footer-link-color: desaturate(darken($footer-background, 40%), 50%);
-  $footer-disclaimer-color: desaturate(darken($footer-background, 40%), 50%);
   background: $footer-background;
   padding-top: $gutter*2;
   
@@ -26,7 +23,10 @@
 
   ul {
 	  padding-left: 0;
-    margin-bottom: $base-spacing * 2;
+	  @include media($tablet) {
+	      margin-bottom: $base-spacing * 2;
+	      font-size: 0.9em;
+	  }
   }
 
   li {
@@ -35,26 +35,17 @@
   }
 
   li a {
-    color: $footer-link-color;
-    text-decoration: none;
-
-    &:focus,
-    &:hover {
-      color: darken($footer-color, 20%);
-    }
   }
 
   .footer-copyright {
-	  a {
-	  	color: $footer-link-color;
-	  }
     padding: $gutter;
     clear: both;
     width: 100%;
-    color: $footer-disclaimer-color;
     font-size: 0.8em;
     line-height: 1.5em;
     margin: auto;
-	padding-right: 110px;
+	@include media($mobile) {
+		padding-right: 110px;
+	}
   }
 }
