--- a/_includes/closure.html
+++ b/_includes/closure.html
@@ -1,5 +1,5 @@
 {% include analyticstracking.html %}
-{% if page.layout == "home" %}
+{% if page.layout == 'grid' %}
 <script>
 
 window.fbAsyncInit = function() {
