--- a/_sass/components/_page.news.scss
+++ b/_sass/components/_page.news.scss
@@ -12,7 +12,9 @@ margin-bottom: $gutter;
 
 #sidebar-second {
 	@include media($tablet) {
-		margin-top: 70px;
+	#fb-teaser {
+		margin-top: 90px;
+	}
 	}
 }
 }
