--- a/_includes/youtube.html
+++ b/_includes/youtube.html
@@ -1,5 +1,5 @@
 <div class="video">
 <div class="video-wrapper">
-<iframe src="{{ include.url}}" frameborder="0" allowfullscreen></iframe>
+<iframe id="#youtube" src="{{ include.url}}?enablejsapi=1&version=3&playerapiid=ytplayer" frameborder="0" allowfullscreen="true" allowscriptaccess="always"></iframe>
 </div>
 </div>
