--- a/_sass/base/_buttons.scss
+++ b/_sass/base/_buttons.scss
@@ -1,5 +1,5 @@
 #{$all-button-inputs},
-button, a.button {
+button, a.button, div.button {
   @include appearance(none);
   -webkit-font-smoothing: antialiased;
   background-color: $action-color;
