--- a/_sass/components/_hero.scss
+++ b/_sass/components/_hero.scss
@@ -4,13 +4,13 @@ $action-color: #477DCA !default;
 $hero-background-top: #7F99BE; 
 $hero-background-bottom: #20392B;
 $hero-color: $base-font-color;
-$hero-background-color: #515356;
+$hero-background-color: #6f0c74;
 $gradient-angle: 10deg;
 $hero-image: '#{"" + $image-directory}/banners/hero-home.jpg';
 @include background(url($hero-image));
 background-position: center top ;
 background-repeat: no-repeat;
-background-color: $hero-background-color;
+background-color: #6f0c74;
 background-size: auto 50%;
 
 .hero-inner {
