--- a/_sass/components/_hero.scss
+++ b/_sass/components/_hero.scss
@@ -6,7 +6,7 @@ $hero-background-bottom: #20392B;
 $hero-color: $base-font-color;
 $hero-background-color: #6f0c74;
 $gradient-angle: 10deg;
-$hero-image: '#{"" + $image-directory}/banners/hero-home.jpg';
+$hero-image: '#{"" + $image-directory}/banners/hero-banner-2.jpg';
 @include background(url($hero-image));
 background-position: center top ;
 background-repeat: no-repeat;
