--- a/_sass/components/_modal.scss
+++ b/_sass/components/_modal.scss
@@ -19,8 +19,8 @@
   $large-screen: em(860) !default;
   $base-font-color: $dark-gray !default;
   $modal-padding: 1.5em;
-  $modal-background: $base-background-color;
-  $modal-close-color: $light-gray;
+  $modal-background: transparent;
+  $modal-close-color: #fff;
   $modal-image-height: 135px;
   $modal-image-width: $modal-image-height;
   $modal-trigger-image-width: 300px;
@@ -74,7 +74,7 @@
     &:before {
       @include position(absolute, 3px 3px 0 50%);
       @include transform(rotate(45deg));
-      @include size(0.15em 1em);
+      @include size(0.15em 1.5em);
       background: $modal-close-color;
       content: '';
       display: block;
@@ -98,12 +98,12 @@
     margin-top: 0;
     margin: auto;
     overflow: auto;
-    padding: $modal-padding / 2;
+    padding: $modal-padding*2 ($modal-padding / 4) ($modal-padding / 4) ($modal-padding / 4);
     position: relative;
     width: 95%;
 
     @include media($medium-screen) {
-      padding: $modal-padding;
+      padding: $modal-padding*2 $modal-padding $modal-padding $modal-padding;
       width: 90%;
     }
 
