Update copyright date auto

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -27,7 +27,7 @@
 		
 		<div class="footer-copyright">
 		    <a href="http://www.valonline.org.uk"><span class="val-logo">A Voluntary Action LeicesterShire (VAL) service.</a></span>
-			<p>{{ site.copyright }}</p>
+			<p>{{ site.copyright }}{{ 'now' | date: "%Y" }}</p>
 		</div>								   
 	</div>
 </footer>
