--- a/css/application.scss
+++ b/css/application.scss
@@ -29,6 +29,7 @@
 @import "components/page.default";
 @import "components/page.home";
 @import "components/page.news";
+@import "components/page.videos";
 @import "components/mailchimp";
 @import "components/modal";
 @import "components/carousel";
