--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -22,6 +22,7 @@
 			<h4>Follow us</h4>
 			<ul>
 				{% if site.facebook != "" %}<li><a href="http://www.facebook.com/{{ site.facebook }}">Like us on Facebook</a></li>{% endif %}
+                				{% if site.instagram != "" %}<li><a href="http://www.instagram.com/{{ site.instagram }}">Follow us on Instagram</a></li>{% endif %}
 			</ul>
 		</div>
 		
