Update boost PAGE

--- a/_sass/base/_variables.scss
+++ b/_sass/base/_variables.scss
@@ -36,7 +36,7 @@ $dark-purple: #6E1859;
 // Helper Colors
 $medium-gray: #CECCC4;
 $light-gray: #C6C4B9;
-$green: #3FAC4D;
+$green: #3BB4A1;
 $pink: #D84A8D;
 
 
