--- a/css/application.scss
+++ b/css/application.scss
@@ -28,6 +28,7 @@
 @import "components/box";
 @import "components/page.default";
 @import "components/page.home";
+@import "components/page.boost";
 @import "components/page.news";
 @import "components/page.videos";
 @import "components/mailchimp";
