--- a/_includes/header.html
+++ b/_includes/header.html
@@ -24,6 +24,53 @@
 	{% for stylesheet in site.conditionalstylesheets %}<!--[{{ stylesheet.target }}]><style type="text/css" media="all">@import url("{{ site.baseurl }}{{ stylesheet.path }}");</style><![endif]-->{% endfor %}
 <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.0.3/cookieconsent.min.css" />
 <script src="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.0.3/cookieconsent.min.js"></script>
+<script>
+window.addEventListener("load", function(){
+window.cookieconsent.initialise({
+  "palette": {
+    "popup": {
+      "background": "#000"
+    },
+    "button": {
+      "background": "#f1d600"
+    }
+  },
+  "type": "opt-in",
+  onInitialise: function (status) {
+    var type = this.options.type;
+    var didConsent = this.hasConsented();
+    if (type == 'opt-in' && didConsent) {
+        window['ga-disable-{{ site.analyticstracking }}'] = false;
+    }
+    if (type == 'opt-out' && !didConsent) {
+        document.cookie = 'ga-disable-{{ site.analyticstracking }}' + '=true; expires=Thu, 31 Dec 2099 23:59:59 UTC; path=/';
+        window['ga-disable-{{ site.analyticstracking }}'] = true;
+    }
+  },
+ 
+  onStatusChange: function(status, chosenBefore) {
+    var type = this.options.type;
+    var didConsent = this.hasConsented();
+    if (type == 'opt-in' && didConsent) {
+        window['ga-disable-{{ site.analyticstracking }}'] = false;
+    }
+    if (type == 'opt-out' && !didConsent) {
+        document.cookie = 'ga-disable-{{ site.analyticstracking }}' + '=true; expires=Thu, 31 Dec 2099 23:59:59 UTC; path=/';
+        window['ga-disable-{{ site.analyticstracking }}'] = true;
+    }
+  },
+ 
+  onRevokeChoice: function() {
+    var type = this.options.type;
+    if (type == 'opt-in') {
+        window['ga-disable-{{ site.analyticstracking }}'] = false;
+    }
+    if (type == 'opt-out') {
+        window['ga-disable-{{ site.analyticstracking }}'] = true;
+    }
+  }
+})});
+</script>
 </head>
 <body>
 	<header class="navigation" role="banner">
